# leisproject

./: .coveragerc  LICENSE  README.md  adding.txt  pyproject.toml  setup.py
docs/: conf.py  index.rst
src/leisproject/: __init__.py  __main__.py
tests/: test_leisproject.py
